# RcppRustCompare

./: .DESCRIPTION.swp  .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md
.github/workflows/: R-CMD-check.yaml
R/: erdos_r.R  erdos_rcpp.R  erdos_rust.R
man/: compareloops-package.Rd  erdos_c.Rd  erdos_r.Rd  erdos_rcpp.Rd  erdos_rust.Rd  fast_erdos_rust.Rd
src/: Makevars  erdos_cpp.cpp  erdos_rust.c  init.c
src/rustgraphs/: .gitignore  Cargo.toml  api.h
src/rustgraphs/src/: c_api.rs  graphs.rs  lib.rs
tests/: testthat.R
tests/testthat/: test-graphs.R
