[package]
name = "rustgraphs"
version = "0.1.0"
authors = ["Tim Taylor <tjtnew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
libc = "0.2.67"
scopeguard = "1.1.0"

[lib]
crate-type = ["staticlib"]